; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_log.c_diff_title.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_log.c_diff_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.strbuf*, i32, i8*, i8*)* @diff_title to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @diff_title(%struct.strbuf* %0, i32 %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.strbuf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %6, align 4
  %10 = icmp sle i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %4
  %12 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = call i32 @strbuf_addstr(%struct.strbuf* %12, i8* %13)
  br label %21

15:                                               ; preds = %4
  %16 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %17 = load i8*, i8** %8, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sub nsw i32 %18, 1
  %20 = call i32 @strbuf_addf(%struct.strbuf* %16, i8* %17, i32 %19)
  br label %21

21:                                               ; preds = %15, %11
  %22 = load %struct.strbuf*, %struct.strbuf** %5, align 8
  %23 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %22, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  ret i8* %24
}

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
